crates/cribo/tests/snapshots/execution_results@xfail_metaclass_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_metaclass_collision/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "Metaclass initialized MyObject with tag my_object",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 76, in <module>",
}
