crates/cribo/tests/snapshots/execution_results@xfail_metaclass_forward_ref_renamed.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_metaclass_forward_ref_renamed/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "File \"<stdin>\", line 83\nSyntaxError: name 'yaml_module_other' is used prior to global declaration",
}
