crates/cribo/tests/snapshots/execution_results@xfail_mixed_import_patterns.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_mixed_import_patterns/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: ">>> === Application Starting === <<<",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 186, in <module>",
}
