crates/cribo/tests/snapshots/execution_results@xfail_module_first_resolution.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_module_first_resolution/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
