crates/cribo/tests/snapshots/execution_results@xfail_module_setattr_with_circular_deps.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_module_setattr_with_circular_deps/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 48, in <module>",
}
