crates/cribo/tests/snapshots/execution_results@xfail_module_shadowing_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
assertion_line: 563
input_file: crates/cribo/tests/fixtures/xfail_module_shadowing_package/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "=== Module Shadowing Test (Package Version) ===\nThis test demonstrates Python's behavior when a first-party package\nshadows a third-party package name.\n\nStarting test_import.py\nSuccessfully imported pandera.polars\npandera.polars module: pandera.polars",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 83, in <module>",
}
