crates/cribo/tests/snapshots/execution_results@xfail_module_side_effects_circular_order.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
assertion_line: 563
input_file: crates/cribo/tests/fixtures/xfail_module_side_effects_circular_order/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 130, in <module>",
}
