crates/cribo/tests/snapshots/execution_results@xfail_namespace_simple_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_namespace_simple_test/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
