crates/cribo/tests/snapshots/execution_results@xfail_no_ops_multimodule_self_refs.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_no_ops_multimodule_self_refs/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 404, in <module>",
}
