crates/cribo/tests/snapshots/execution_results@xfail_pandera-polars.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_pandera-polars/main.py
---
ExecutionResults {
    status: Success,
    stdout: "",
    stderr: "",
}
